# stm32

./: .gitignore  CMakeLists.txt  STM32H750VBTx_FLASH.ld  arm-none-eabi-toolchain.cmake  flash_jlink.py  freertos_config.cmake  jlink.jlink
Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_i2c.c
Inc/: FreeRTOSConfig.h  bsp_config.h  stm32h7xx_hal_conf.h
Inc/config/: bsp_config.h  retarget.h
Inc/init/: adc_init.h  freertos_init.h  gpio_init.h  i2c_init.h  i2s_init.h  init_task.h  spi_init.h
Inc/tasks/: adc_task.h  i2c_task.h  i2s_task.h  led_task.h  spi_task.h
cmd/: j_run.bat  s_build.bat  s_config.bat
src/: bsp_config.c  main.c  startup_stm32h750xx.s  stm32h7xx_hal_msp.c
src/config/: bsp_config.c  retarget.c
src/init/: adc_init.c  freertos_init.c  gpio_init.c  i2c_init.c  i2s_init.c  init_task.c  spi_init.c  uart_init.c
src/tasks/: adc_task.c  i2c_task.c  i2s_task.c  led_task.c  spi_task.c
